--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,20 +26,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     api project(':sdk')
     //Glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     //Butterknife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-
+    implementation files('libs/AMap3DMap_6.8.0_AMapNavi_6.7.0_AMapSearch_6.5.0_AMapLocation_4.6.0_20190423.jar')
 }
