--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.zhang.hoh">
 
+    <!--允许程序打开网络套接字-->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!--允许程序设置内置sd卡的写权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--允许程序获取网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".global.MyApplication"
@@ -13,6 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
+        <meta-data android:name="com.amap.api.v2.apikey"
+            android:value="233a3f100a6be433e78dedaed3889507"/>
+
         <activity android:name=".ui.activity.MainActivity">
 
         </activity>
@@ -28,6 +42,12 @@
         </activity>
 
         <activity android:name=".ui.activity.list.MuseumDetailActivity" >
+
+        </activity>
+        <activity android:name=".ui.activity.personal.PersonalDataActivity" >
+
+        </activity>
+        <activity android:name=".ui.activity.personal.PersonalSettingActivity" >
 
         </activity>
 
